# cocktail-catalogue

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  cocktail-catalogue.db  config.yml  notes.md  test.db
.github/workflows/: ci.yml  verify.yml
migrations/: 20201201174509_create_users_table.sql  20201201184509_create_cocktails_table.sql  20201202183431_create_ingredient_types_table.sql  20201202185712_create_ingredients_table.sql  20201202194948_create_instructions_table.sql  20230723112326_initial_cocktail_table.sql  20230723145324_initial_ingredients_table.sql  20230723161236_ingredient_simplified.sql
scripts/: init_db.sh
src/: configuration.rs  database.rs  lib.rs  logging.rs  main.rs  schema.rs  server.rs  utils.rs
src/graphql/: cocktail.rs  ingredient.rs  mod.rs  mutation.rs  query.rs
src/schema/: context.rs  mod.rs  mutation.rs  query.rs  subscription.rs  types.rs
tests/: create_cocktail.rs  health_check.rs  helpers.rs
tests/api/: cocktail.rs  main.rs
tests/api/helpers/: graphql_client.rs  mod.rs  test_data.rs
