[package]
name = "cocktail-catalogue"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers", "macros"] }
tokio = { version = "1.29", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
color-eyre = "0.6"
eyre = "0.6"
