[package]
name = "cocktail-catalogue"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers", "macros"] }
tower-http = { version = "0.4", features = ["trace"] }
tokio = { version = "1.29", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "uuid" ] }
color-eyre = "0.6"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3"
uuid = { version = "1.4.1", features = ["v4"] }
async-graphql = { version = "5.0.10", features = ["uuid"] }
futures-util = "0.3.28"

[dev-dependencies]
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.174"
serde_json = "1.0.103"
